--- a/SensorDataReading/app/src/main/res/layout/activity_main.xml
+++ b/SensorDataReading/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Magnetometer" />
+    <TextView
+        android:id="@+id/label_gyroscope"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gyroscope" />
 
 </LinearLayout>
